# peppi

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: test.yml
benches/: criterion.rs  iai.rs
benches/data/: old_ver_thegang.slp  short_game_tbh10.slp
peppi/: Cargo.toml  README.md
peppi-arrow/: Cargo.toml  README.md
peppi-arrow/src/: lib.rs
peppi-derive/: Cargo.toml  README.md
peppi-derive/src/: lib.rs
peppi/benches/: criterion_benchmarks.rs  iai_benchmarks.rs
peppi/src/: action_state.rs  arrow.rs  character.rs  frame.rs  game.rs  game_parser.rs  ground.rs  item.rs  lib.rs  metadata.rs  parse.rs  primitives.rs  pseudo_bitmask.rs  pseudo_enum.rs  regex.rs  slippi.rs  stats.rs  test.rs  triggers.rs  ubjson.rs  unparse.rs
peppi/src/info/: character.rs  info.rs  stage.rs
peppi/src/model/: buttons.rs  frame.rs  game.rs  item.rs  metadata.rs  primitives.rs  pseudo_bitmask.rs  pseudo_enum.rs  regex_match.rs  shift_jis.rs  slippi.rs  triggers.rs
peppi/src/model/enums/: action_state.rs  character.rs  costume.rs  item.rs  stage.rs
peppi/src/serde/: arrow.rs  collect.rs  de.rs  handlers.rs  ser.rs
peppi/src/stats/: actions.rs  interface.rs
peppi/src/ubjson/: de.rs  ser.rs
peppi/tests/: arrow.rs  json.rs  peppi.rs  regex.rs  shift_jis.rs  stats.rs
peppi/tests/common/: mod.rs
peppi/tests/data/: netplay.slp  v3.13.slp
src/: action_state.rs  arrow.rs  attack.rs  bin.rs  buttons.rs  character.rs  frame.rs  frame_data.rs  game.rs  game_parser.rs  io.rs  item.rs  lib.rs  metadata.rs  parse.rs  primitives.rs  pseudo_bitmask.rs  pseudo_enum.rs  query.rs  slippi.rs  stage.rs  test.rs  triggers.rs  ubjson.rs
src/frame/: mod.rs  mutable.rs  transpose.rs
src/frame/immutable/: mod.rs  peppi.rs  slippi.rs
src/game/: immutable.rs  mod.rs  mutable.rs  shift_jis.rs
src/io/: mod.rs  peppi.rs  slippi.rs  ubjson.rs
src/io/peppi/: de.rs  mod.rs  ser.rs
src/io/slippi/: de.rs  mod.rs  ser.rs
src/io/ubjson/: de.rs  ser.rs
src/model/: columnar.rs  frame.rs  game.rs  metadata.rs  primitives.rs  pseudo_bitmask.rs  pseudo_enum.rs  shift_jis.rs  slippi.rs
src/model/enums/: action_state.rs  attack.rs  character.rs  costume.rs
src/model/frame/: immutable.rs  mod.rs  mutable.rs  transpose.rs
src/model/frame/immutable/: mod.rs  peppi.rs  slippi.rs
src/model/game/: immutable.rs  mutable.rs
src/serde/: de.rs  ser.rs
src/ubjson/: de.rs
tests/: arrow.rs  common.rs  json.rs  peppi.rs
tests/common/: mod.rs
tests/data/: corrupt.slp  crazy_name_tags.slp  duplicate_game_end.slp  ics2.slp  transform.slp  unknown_event.slp  v3.12.slp  v3.16.slp  v3.18.slp
