[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Parser for Slippi replay files"
edition = "2021"
license = "MIT"
name = "peppi"
repository = "https://github.com/hohav/peppi"
version = "2.0.0-alpha.1"

[dependencies]
arrow2 = "0.18"
byteorder = "1"
encoding_rs = "0.8"
log = "0.4"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
arrow2 = { version = "0.18", features = ["io_json"] }
pretty_assertions = "1.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[lib]
name = "peppi"
path = "src/lib.rs"
