[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Parser for Slippi replay files"
edition = "2021"
license = "MIT"
name = "peppi"
repository = "https://github.com/hohav/peppi"
version = "2.0.0-alpha.2"
exclude = ["benches", "tests"]

[dependencies]
arrow2 = { version = "0.18", features = ["io_ipc", "io_ipc_compression", "io_json" ] }
byteorder = "1"
encoding_rs = "0.8"
log = "0.4"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tar = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
arrow2 = { version = "0.18", features = ["io_json"] }
criterion = "0.5"
iai-callgrind = "0.8"
pretty_assertions = "1.3"
ssbm-data = "0.1"

[lib]
name = "peppi"
path = "src/lib.rs"

[[bench]]
name = "criterion"
harness = false
path = "benches/criterion.rs"

[[bench]]
name = "iai"
harness = false
path = "benches/iai.rs"
bench = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
