[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Support crate for peppi"
edition = "2021"
license = "MIT"
name = "peppi-arrow"
repository = "https://github.com/hohav/peppi"
version = "0.2.3"

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "f75ce4266e04c4084fa5666c6c5ff5efd6b5036f" }
