[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Support crate for peppi"
edition = "2018"
license = "MIT"
name = "peppi-derive"
repository = "https://github.com/hohav/peppi"
version = "0.2.2"

[dependencies]
darling = "0.13"
peppi-arrow = { path = "../peppi-arrow" }
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.5"
syn = "1.0"

[lib]
proc-macro = true
