[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Parser for Slippi replay files"
edition = "2021"
license = "MIT"
name = "peppi"
repository = "https://github.com/hohav/peppi"
version = "1.0.0-alpha.6"

[dependencies]
arrow2 = { git = "https://github.com/jorgecarleitao/arrow2.git", rev = "f75ce4266e04c4084fa5666c6c5ff5efd6b5036f" }
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
lazy_static = { version = "1.4.0", optional = true }
log = "0.4"
num_enum = "0.5"
peppi-arrow = { path = "../peppi-arrow" }
peppi-derive = { path = "../peppi-derive" }
regex = { version = "1", default-features = false, features = ["perf"], optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[features]
regex_match = ["dep:regex", "dep:lazy_static"]

[lib]
name = "peppi"
path = "src/lib.rs"
