[package]
authors = ["melkor <hohav@fastmail.com>"]
description = "Parser for Slippi replay files"
edition = "2021"
license = "MIT"
name = "peppi"
repository = "https://github.com/hohav/peppi"
version = "1.0.0-alpha.7"

[dependencies]
arrow2 = "0.15"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
log = "0.4"
num_enum = "0.5"
peppi-arrow = { path = "../peppi-arrow" }
peppi-derive = { path = "../peppi-derive" }
pretty_assertions = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[dev-dependencies]
criterion = "0.3"
iai = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[lib]
name = "peppi"
path = "src/lib.rs"

[[bench]]
name = "criterion_benchmarks"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false
